src/main/java/antlr/GrammarParser.java
package antlr;// Generated from C:/Users/charl/OneDrive/Documents/GitHub/p4/src\Grammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Begin=1, End=2, For=3, If=4, Else=5, Import=6, Quotes=7, FileType=8, Player=9, 
		Lives=10, LevelDesign=11, Entities=12, Game=13, Enemy=14, Item=15, Place=16, 
		Wall=17, Entrance=18, Print=19, Command=20, ON=21, Level=22, Gate=23, 
		Finish=24, Actions=25, Tile=26, COORDINATEX=27, COORDINATEY=28, Tiles=29, 
		PlayerPosition=30, AddOprt=31, SubOprt=32, MultiOprt=33, DivOprt=34, ModOprt=35, 
		AssignOprt=36, LessThan=37, GreaterThan=38, GreaterOrEqual=39, LessOrEqual=40, 
		AndOprt=41, NotOprt=42, OrOprt=43, CompareOprt=44, LBRACE=45, RBRACE=46, 
		LPAREN=47, RPAREN=48, COMMA=49, PERIOD=50, SEMICOLON=51, COLON=52, DIGIT=53, 
		ID=54, STRING=55, DAMAGE=56, COMMENT=57, LINE_COMMENT=58, WS=59;
	public static final int
		RULE_s = 0, RULE_dcl = 1, RULE_importStmt = 2, RULE_cmdStmt = 3, RULE_iterativeStmt = 4, 
		RULE_controlStmt = 5, RULE_playerDcl = 6, RULE_attr = 7, RULE_levelDcl = 8, 
		RULE_levels = 9, RULE_size = 10, RULE_placement = 11, RULE_place = 12, 
		RULE_entityDcl = 13, RULE_entities = 14, RULE_enemy = 15, RULE_item = 16, 
		RULE_bexpr = 17, RULE_bterm = 18, RULE_baexpr = 19, RULE_baterm = 20, 
		RULE_bfactor = 21, RULE_condexpr = 22, RULE_aexpr = 23, RULE_term = 24, 
		RULE_factor = 25, RULE_logoprt = 26, RULE_reloprt = 27, RULE_asoprt = 28, 
		RULE_mmdoprt = 29, RULE_rspnd = 30, RULE_location = 31, RULE_gameLoop = 32, 
		RULE_coordinate = 33, RULE_tileXY = 34, RULE_levelName = 35, RULE_gate = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "dcl", "importStmt", "cmdStmt", "iterativeStmt", "controlStmt", 
			"playerDcl", "attr", "levelDcl", "levels", "size", "placement", "place", 
			"entityDcl", "entities", "enemy", "item", "bexpr", "bterm", "baexpr", 
			"baterm", "bfactor", "condexpr", "aexpr", "term", "factor", "logoprt", 
			"reloprt", "asoprt", "mmdoprt", "rspnd", "location", "gameLoop", "coordinate", 
			"tileXY", "levelName", "gate"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'end'", "'for'", "'if'", "'else'", "'import'", "'\"'", 
			"'.rpt'", "'Player'", "'Lives'", "'LevelDesign'", "'Entities'", "'Game'", 
			"'Enemy'", "'Item'", "'place'", "'Wall'", "'Entrance'", "'Print'", "'Command'", 
			"'on'", "'level-'", "'Gate'", "'Finish'", null, "'Tile'", "'x'", "'y'", 
			"'Tiles'", "'PlayerPosition'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
			"'<'", "'>'", "'>='", "'<='", "'and'", "'not'", "'or'", "'is'", "'{'", 
			"'}'", "'('", "')'", "','", "'.'", "';'", "':'", null, null, null, "'Damage'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Begin", "End", "For", "If", "Else", "Import", "Quotes", "FileType", 
			"Player", "Lives", "LevelDesign", "Entities", "Game", "Enemy", "Item", 
			"Place", "Wall", "Entrance", "Print", "Command", "ON", "Level", "Gate", 
			"Finish", "Actions", "Tile", "COORDINATEX", "COORDINATEY", "Tiles", "PlayerPosition", 
			"AddOprt", "SubOprt", "MultiOprt", "DivOprt", "ModOprt", "AssignOprt", 
			"LessThan", "GreaterThan", "GreaterOrEqual", "LessOrEqual", "AndOprt", 
			"NotOprt", "OrOprt", "CompareOprt", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
			"COMMA", "PERIOD", "SEMICOLON", "COLON", "DIGIT", "ID", "STRING", "DAMAGE", 
			"COMMENT", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SContext extends ParserRuleContext {
		public TerminalNode Begin() { return getToken(GrammarParser.Begin, 0); }
		public GameLoopContext gameLoop() {
			return getRuleContext(GameLoopContext.class,0);
		}
		public TerminalNode End() { return getToken(GrammarParser.End, 0); }
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<ImportStmtContext> importStmt() {
			return getRuleContexts(ImportStmtContext.class);
		}
		public ImportStmtContext importStmt(int i) {
			return getRuleContext(ImportStmtContext.class,i);
		}
		public List<DclContext> dcl() {
			return getRuleContexts(DclContext.class);
		}
		public DclContext dcl(int i) {
			return getRuleContext(DclContext.class,i);
		}
		public CmdStmtContext cmdStmt() {
			return getRuleContext(CmdStmtContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Import) {
				{
				{
				setState(74);
				importStmt();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(Begin);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Player) | (1L << LevelDesign) | (1L << Entities) | (1L << COMMENT) | (1L << LINE_COMMENT))) != 0)) {
				{
				{
				setState(81);
				dcl();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Command) {
				{
				setState(87);
				cmdStmt();
				}
			}

			setState(90);
			gameLoop();
			setState(91);
			match(End);
			setState(92);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public PlayerDclContext playerDcl() {
			return getRuleContext(PlayerDclContext.class,0);
		}
		public LevelDclContext levelDcl() {
			return getRuleContext(LevelDclContext.class,0);
		}
		public EntityDclContext entityDcl() {
			return getRuleContext(EntityDclContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(GrammarParser.COMMENT, 0); }
		public TerminalNode LINE_COMMENT() { return getToken(GrammarParser.LINE_COMMENT, 0); }
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dcl);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Player:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				playerDcl();
				}
				break;
			case LevelDesign:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				levelDcl();
				}
				break;
			case Entities:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				entityDcl();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				match(COMMENT);
				}
				break;
			case LINE_COMMENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				match(LINE_COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(GrammarParser.Import, 0); }
		public TerminalNode LessThan() { return getToken(GrammarParser.LessThan, 0); }
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode FileType() { return getToken(GrammarParser.FileType, 0); }
		public TerminalNode GreaterThan() { return getToken(GrammarParser.GreaterThan, 0); }
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(Import);
			setState(102);
			match(LessThan);
			setState(103);
			match(ID);
			setState(104);
			match(FileType);
			setState(105);
			match(GreaterThan);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdStmtContext extends ParserRuleContext {
		public TerminalNode Command() { return getToken(GrammarParser.Command, 0); }
		public TerminalNode LBRACE() { return getToken(GrammarParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(GrammarParser.RBRACE, 0); }
		public List<TerminalNode> Actions() { return getTokens(GrammarParser.Actions); }
		public TerminalNode Actions(int i) {
			return getToken(GrammarParser.Actions, i);
		}
		public CmdStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitCmdStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdStmtContext cmdStmt() throws RecognitionException {
		CmdStmtContext _localctx = new CmdStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmdStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(Command);
			setState(108);
			match(LBRACE);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Actions) {
				{
				{
				setState(109);
				match(Actions);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IterativeStmtContext extends ParserRuleContext {
		public TerminalNode For() { return getToken(GrammarParser.For, 0); }
		public TerminalNode LPAREN() { return getToken(GrammarParser.LPAREN, 0); }
		public TerminalNode Tile() { return getToken(GrammarParser.Tile, 0); }
		public TerminalNode COLON() { return getToken(GrammarParser.COLON, 0); }
		public TerminalNode Tiles() { return getToken(GrammarParser.Tiles, 0); }
		public TerminalNode RPAREN() { return getToken(GrammarParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(GrammarParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(GrammarParser.RBRACE, 0); }
		public List<ControlStmtContext> controlStmt() {
			return getRuleContexts(ControlStmtContext.class);
		}
		public ControlStmtContext controlStmt(int i) {
			return getRuleContext(ControlStmtContext.class,i);
		}
		public IterativeStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterativeStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitIterativeStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IterativeStmtContext iterativeStmt() throws RecognitionException {
		IterativeStmtContext _localctx = new IterativeStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_iterativeStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(For);
			setState(118);
			match(LPAREN);
			setState(119);
			match(Tile);
			setState(120);
			match(COLON);
			setState(121);
			match(Tiles);
			setState(122);
			match(RPAREN);
			setState(123);
			match(LBRACE);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==If) {
				{
				{
				setState(124);
				controlStmt();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControlStmtContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(GrammarParser.If, 0); }
		public TerminalNode LPAREN() { return getToken(GrammarParser.LPAREN, 0); }
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GrammarParser.RPAREN, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(GrammarParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(GrammarParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(GrammarParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(GrammarParser.RBRACE, i);
		}
		public List<PlacementContext> placement() {
			return getRuleContexts(PlacementContext.class);
		}
		public PlacementContext placement(int i) {
			return getRuleContext(PlacementContext.class,i);
		}
		public TerminalNode Else() { return getToken(GrammarParser.Else, 0); }
		public ControlStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitControlStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlStmtContext controlStmt() throws RecognitionException {
		ControlStmtContext _localctx = new ControlStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_controlStmt);
		int _la;
		try {
			setState(167);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(If);
				setState(133);
				match(LPAREN);
				setState(134);
				bexpr(0);
				setState(135);
				match(RPAREN);
				setState(136);
				match(LBRACE);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << For) | (1L << If) | (1L << Place) | (1L << Print))) != 0)) {
					{
					{
					setState(137);
					placement();
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(143);
				match(RBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				match(If);
				setState(146);
				match(LPAREN);
				setState(147);
				bexpr(0);
				setState(148);
				match(RPAREN);
				setState(149);
				match(LBRACE);
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << For) | (1L << If) | (1L << Place) | (1L << Print))) != 0)) {
					{
					{
					setState(150);
					placement();
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(156);
				match(RBRACE);
				setState(157);
				match(Else);
				setState(158);
				match(LBRACE);
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << For) | (1L << If) | (1L << Place) | (1L << Print))) != 0)) {
					{
					{
					setState(159);
					placement();
					}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(165);
				match(RBRACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayerDclContext extends ParserRuleContext {
		public TerminalNode Player() { return getToken(GrammarParser.Player, 0); }
		public TerminalNode LBRACE() { return getToken(GrammarParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(GrammarParser.RBRACE, 0); }
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public PlayerDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_playerDcl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitPlayerDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlayerDclContext playerDcl() throws RecognitionException {
		PlayerDclContext _localctx = new PlayerDclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_playerDcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(Player);
			setState(170);
			match(LBRACE);
			setState(172); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(171);
				attr();
				}
				}
				setState(174); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Lives );
			setState(176);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrContext extends ParserRuleContext {
		public TerminalNode Lives() { return getToken(GrammarParser.Lives, 0); }
		public TerminalNode COLON() { return getToken(GrammarParser.COLON, 0); }
		public TerminalNode DIGIT() { return getToken(GrammarParser.DIGIT, 0); }
		public AttrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitAttr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrContext attr() throws RecognitionException {
		AttrContext _localctx = new AttrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(Lives);
			setState(179);
			match(COLON);
			setState(180);
			match(DIGIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelDclContext extends ParserRuleContext {
		public TerminalNode LevelDesign() { return getToken(GrammarParser.LevelDesign, 0); }
		public TerminalNode LBRACE() { return getToken(GrammarParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(GrammarParser.RBRACE, 0); }
		public List<LevelsContext> levels() {
			return getRuleContexts(LevelsContext.class);
		}
		public LevelsContext levels(int i) {
			return getRuleContext(LevelsContext.class,i);
		}
		public LevelDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levelDcl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitLevelDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelDclContext levelDcl() throws RecognitionException {
		LevelDclContext _localctx = new LevelDclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_levelDcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(LevelDesign);
			setState(183);
			match(LBRACE);
			setState(185); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(184);
				levels();
				}
				}
				setState(187); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Level );
			setState(189);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelsContext extends ParserRuleContext {
		public LevelNameContext levelName() {
			return getRuleContext(LevelNameContext.class,0);
		}
		public SizeContext size() {
			return getRuleContext(SizeContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(GrammarParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(GrammarParser.RBRACE, 0); }
		public List<PlacementContext> placement() {
			return getRuleContexts(PlacementContext.class);
		}
		public PlacementContext placement(int i) {
			return getRuleContext(PlacementContext.class,i);
		}
		public LevelsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levels; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitLevels(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelsContext levels() throws RecognitionException {
		LevelsContext _localctx = new LevelsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_levels);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			levelName();
			setState(192);
			size();
			setState(193);
			match(LBRACE);
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << For) | (1L << If) | (1L << Place) | (1L << Print))) != 0)) {
				{
				{
				setState(194);
				placement();
				}
				}
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(200);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SizeContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(GrammarParser.LPAREN, 0); }
		public List<TerminalNode> DIGIT() { return getTokens(GrammarParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(GrammarParser.DIGIT, i);
		}
		public TerminalNode COMMA() { return getToken(GrammarParser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(GrammarParser.RPAREN, 0); }
		public SizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_size; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>)visitor).visitSize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SizeContext size() throws RecognitionException {
		SizeContext _localctx = new SizeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_size);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			match(LPAREN);
			setState(203);
			match(DIGIT);
			setState(204);
			match(COMMA);
			setState(205);
